--- a/sdk/src/main/AndroidManifest.xml
+++ b/sdk/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.datalogic.android.sdk">
+    package="com.datalogic.android.sdk.selfshopping">
 
     <application>
         <uses-library
