--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -41,7 +41,7 @@ task sourcesJar(type: Jar) {
     classifier = 'sources'
 }
 
-task javadoc(type: Javadoc) {
+task javadocSrcs(type: Javadoc) {
     failOnError  false
     source = android.sourceSets.main.java.sourceFiles
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
@@ -49,9 +49,9 @@ task javadoc(type: Javadoc) {
 }
 
 // build a jar with javadoc
-task javadocJar(type: Jar, dependsOn: javadoc) {
+task javadocJar(type: Jar, dependsOn: javadocSrcs) {
     classifier = 'javadoc'
-    from javadoc.destinationDir
+    from javadocSrcs.destinationDir
 }
 
 artifacts {
